src/test/ui/nll/enum-drop-access.stderr
error[E0713]: borrow may still be in use when destructor runs
  --> $DIR/enum-drop-access.rs:13:31
   |
LL |         DropOption::Some(&mut ref mut r) => {
   |                               ^^^^^^^^^
...
LL | }
   | -- borrow later used here
   | |
   | here, drop of `opt` needs exclusive access to `*opt.0`, because the type `DropOption<&mut i32>` implements the `Drop` trait
   |
   = note: consider using a `let` binding to create a longer lived value

error[E0713]: borrow may still be in use when destructor runs
  --> $DIR/enum-drop-access.rs:22:36
   |
LL |         Some(DropOption::Some(&mut ref mut r)) => {
   |                                    ^^^^^^^^^
...
LL | }
   | -- borrow later used here
   | |
   | here, drop of `opt` needs exclusive access to `*opt.0.0`, because the type `DropOption<&mut i32>` implements the `Drop` trait
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0713`.
